k8s/homecare360/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - image: asia-southeast1-docker.pkg.dev/home-care-360/auth/production
          name: auth
          ports:
            - containerPort: 3000
