k8s/homecare360/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.homecare360.space
      secretName: gateway-tls
  rules:
    - host: api.homecare360.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-http
                port:
                  number: 80
